hard contrast fix css

--- a/app/scss/all.scss
+++ b/app/scss/all.scss
@@ -365,6 +365,8 @@ body.mic-toolbox-contrast-soft > :not(#mic-init-access-tool) *:not(img), {
 
 // CONTRAST INVERT
 body.mic-toolbox-contrast-hard > :not(#mic-init-access-tool) {
+	background-color: #fff;
+	color: #000;
   filter: invert(100%) !important;
 }
 
